--- a/Content/css/fonts-default.css
+++ b/Content/css/fonts-default.css
@@ -9,56 +9,56 @@
 */
 
 @font-face {
-  font-family: 'pdj';
-  font-style: normal;
-  font-weight: 100;
-  src: url('../fonts/roboto-pdj-100.eot'); /* IE9 Compat Modes */
-  src: local('pdj'), local('pdj'),
-       url('../fonts/roboto-pdj-100-.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-pdj-100.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-pdj-100.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-pdj-100.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-pdj-100.svg#pdj') format('svg'); /* Legacy iOS */
+    font-family: 'pdj';
+    font-style: normal;
+    font-weight: 100;
+    src: url('/Content/fonts/roboto-pdj-100.eot'); /* IE9 Compat Modes */
+    src: local('pdj'), local('pdj'),
+    url('/Content/fonts/roboto-pdj-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/Content/fonts/roboto-pdj-100.woff2') format('woff2'), /* Super Modern Browsers */
+    url('/Content/fonts/roboto-pdj-100.woff') format('woff'), /* Modern Browsers */
+    url('/Content/fonts/roboto-pdj-100.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('/Content/fonts/roboto-pdj-100.svg#pdj') format('svg'); /* Legacy iOS */
 }
 
 
 @font-face {
-  font-family: 'pdj';
-  font-style: normal;
-  font-weight: 300;
-  src: url('../fonts/roboto-pdj-300.eot'); /* IE9 Compat Modes */
-  src: local('pdj'), local('pdj'),
-       url('../fonts/roboto-pdj-300-.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-pdj-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-pdj-300.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-pdj-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-pdj-300.svg#pdj') format('svg'); /* Legacy iOS */
+    font-family: 'pdj';
+    font-style: normal;
+    font-weight: 300;
+    src: url('/Content/fonts/roboto-pdj-300.eot'); /* IE9 Compat Modes */
+    src: local('pdj'), local('pdj'),
+    url('/Content/fonts/roboto-pdj-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/Content/fonts/roboto-pdj-300.woff2') format('woff2'), /* Super Modern Browsers */
+    url('/Content/fonts/roboto-pdj-300.woff') format('woff'), /* Modern Browsers */
+    url('/Content/fonts/roboto-pdj-300.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('/Content/fonts/roboto-pdj-300.svg#pdj') format('svg'); /* Legacy iOS */
 }
 
 
 @font-face {
-  font-family: 'pdj';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/roboto-pdj-500.eot'); /* IE9 Compat Modes */
-  src: local('pdj'), local('pdj'),
-       url('../fonts/roboto-pdj-500-.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-pdj-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-pdj-500.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-pdj-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-pdj-500.svg#pdj') format('svg'); /* Legacy iOS */
+    font-family: 'pdj';
+    font-style: normal;
+    font-weight: 500;
+    src: url('/Content/fonts/roboto-pdj-500.eot'); /* IE9 Compat Modes */
+    src: local('pdj'), local('pdj'),
+    url('/Content/fonts/roboto-pdj-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/Content/fonts/roboto-pdj-500.woff2') format('woff2'), /* Super Modern Browsers */
+    url('/Content/fonts/roboto-pdj-500.woff') format('woff'), /* Modern Browsers */
+    url('/Content/fonts/roboto-pdj-500.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('/Content/fonts/roboto-pdj-500.svg#pdj') format('svg'); /* Legacy iOS */
 }
 
 
 @font-face {
-  font-family: 'pdj';
-  font-style: normal;
-  font-weight: 900;
-  src: url('../fonts/roboto-pdj-900.eot'); /* IE9 Compat Modes */
-  src: local('pdj'), local('pdj'),
-       url('../fonts/roboto-pdj-900-.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/roboto-pdj-900.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/roboto-pdj-900.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/roboto-pdj-900.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/roboto-pdj-900.svg#pdj') format('svg'); /* Legacy iOS */
+    font-family: 'pdj';
+    font-style: normal;
+    font-weight: 900;
+    src: url('/Content/fonts/roboto-pdj-900.eot'); /* IE9 Compat Modes */
+    src: local('pdj'), local('pdj'),
+    url('/Content/fonts/roboto-pdj-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/Content/fonts/roboto-pdj-900.woff2') format('woff2'), /* Super Modern Browsers */
+    url('/Content/fonts/roboto-pdj-900.woff') format('woff'), /* Modern Browsers */
+    url('/Content/fonts/roboto-pdj-900.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('/Content/fonts/roboto-pdj-900.svg#pdj') format('svg'); /* Legacy iOS */
 }
