--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,5 @@
 
 .gallery-showcase-block {
-    opacity: 0;
     width: 100%;
     height: auto;
     margin-bottom: 1px;
@@ -37,12 +36,16 @@
 .gallery-container img {
     width: 100%;
     display: none;
-    margin-top: 40px;
-    padding: 0px 25px;
+    margin-top: 0px;
+    padding: 30px 5px;
 }
 .gallery-showcase-li {
 
 }
+.point:hover {
+    cursor: pointer;
+}
+
 .gallery-header {
     position: static;
     margin: 0 0 1px 0;
@@ -56,8 +59,6 @@
     text-transform: none
 }
 .gallery-container {
-    height: 0px;
-    opacity: 0;
     background: #3b3b53;
 }
 
@@ -84,67 +85,115 @@
     background: #fff;
     color: #3a5ee1;
 }
+.slider #close{
+    color: white;
+    position: absolute;
+    top: 50px;
+    right: -10px;
+    font-size: 21px;
+    width: 50px;
+    padding: 0px 0px 0px 10px;
+}
+.slider #close:hover {
+    cursor: pointer;
+}
+.slider #prev {
+    background: url(/css/images/slider-left.jpg);
+    top: 45%;
+    left: 10px;
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+    position: absolute;
+    border-radius: 35px;
+}
+.slider #next {
+    background: url(/css/images/slider-right.jpg);
+    top: 45%;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+    position: absolute;
+    /* color: white; */
+    border-radius: 35px;
+}
+.slider {
+    display: none;
+    position: fixed;
+    width: 100%;
+    background: rgb(42,41,55);
+    z-index: 100000;
+    top: 0px;
+    left: 0px;
+}
+.slider .slider-container {
+    padding: 50px;
+}
+.slider .slider-container img{
+    display: none;
+}
 
 .gallery-header .ico::before {
     content: "";
 }
 #point_1 {
     position: relative;
-    top: -380px;
-    left: -860px;
+    top: -350px;
+    left: -830px;
 }
 #point_2 {
     position: relative;
-    top: -270px;
-    left: -720px;
+    top: -240px;
+    left: -690px;
 }
 #point_3 {
     position: relative;
-    top: -310px;
-    left: -610px;
+    top: -280px;
+    left: -580px;
 }
 #point_4 {
     position: relative;
-    top: -380px;
-    left: -480px;
+    top: -350px;
+    left: -450px;
 }
 #point_5 {
     position: relative;
-    top: -310px;
-    left: -360px;
+    top: -280px;
+    left: -330px;
 }
 #point_6  {
     position: relative;
-    top: -180px;
-    left: -330px;
+    top: -150px;
+    left: -300px;
 }
 #point_7 {
     position: relative;
-    top: -310px;
-    left: -230px;
+    top: -280px;
+    left: -200px;
 }
 #point_8 {
     position: relative;
-    top: -380px;
-    left: -100px;
+    top: -350px;
+    left: -70px;
 }
 #point_9 {
     position: relative;
-    top: -180px;
-    left: -20px;
+    top: -150px;
+    left: 10px;
 }
 #point_10 {
     position: relative;
-    top: -320px;
-    left: 180px;
+    top: -280px;
+    left: 210px;
 }
 #point_11 {
     position: relative;
-    top: -60px;
-    left: 210px;
+    top: -50px;
+    left: 230px;
 }
 #point_12 {
     position: relative;
-    top: -150px;
-    left: -510px;
+    top: -120px;
+    left: -480px;
 }
